--- a/index.html
+++ b/index.html
@@ -34,10 +34,19 @@
             <h2>works</h2>
             <table>
                 <tr>
-                    <th>The Favourite (2018) poster</th>
+                    <th>The Favourite (2018)</th>
                     <th>Scott Pilgrim vs the World (2010)</th>
                     <th>Russian Doll (2019)</th>
                 </tr>
+                <tr>
+                    <td><img src="https://i.imgur.com/ERni4sB.jpg" title="source: imgur.com" alt="movie poster hand with red rope attached to a crown. " width="400px"/></img>
+                    </td>
+                    <td><img src="https://i.imgur.com/NSz57Vi.jpg" title="source: imgur.com" alt=" movie poster with purple background" width="400px"/></img>
+                    </td>
+                    <td><img src="https://imgur.com/rGUZRGf.jpg" title="source: imgur.com" alt= "abstract psoter of russian doll" width="400px"/></img>
+                    </td>
+                </tr>
+
             </table>
 
         </section>
