--- a/index.html
+++ b/index.html
@@ -59,10 +59,14 @@
                 </tr>
             </table>
         </section>
-
-
-
-
+        <section id="contacts">
+            <h2>get in touch</h2>
+            <ul style="display:inline">
+                <a href="https://www.instagram.com/merileaks/" >instagram</a>
+                <a href="https://facebook.com/" >facebook</a>
+                <a href="https://twitter.com/logout">twitter</a>
+            </ul>
+        </section>
+    </main>
 </body>
-
 </html>
