--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <h1>meriele</h1>
+        <h1 id="header">meriele</h1>
         <nav>
             <ul>
                 <a href="#about">about</a>
@@ -22,7 +22,7 @@
     </header>
     <main>
         <section id="about">
-            <h2>about</h2></a>
+            <a href="#header"><h2>about</h2></a> <!-- each h1 are jumplinked to go back to the top, no more needless scrolling !! -->
             <p>Hi I'm Meriele! I am a student at SAIT enrolled in the Interactive Design Diploma in the UX stream.</p>
             <p>With this website I hope to practice my skills as a web developer and, by the end of this course, hopefully get good enough to be considered the following:</p>
             <ul style="list-style-type: circle">
@@ -33,7 +33,7 @@
             <p>yep! you heard that right. I, like the million of other creatives in the world right now, wants a job out of this *audience gasps*. So without further ado: my portfiolio!</p>
         </section>
         <section id="works">
-            <h2>works</h2>
+            <a href="#header"><h2>works</h2></a>
             <table>
                 <tr>
                     <th>The Favourite (2018)</th>
@@ -62,7 +62,7 @@
             </table>
         </section>
         <section id="contacts">
-            <h2>get in touch</h2>
+            <a href="#header"><h2>get in touch</h2></a>
             <ul style="display:inline">
                 <a href="https://www.instagram.com/merileaks/" >instagram</a>
                 <a href="https://facebook.com/" >facebook</a>
