--- a/index.html
+++ b/index.html
@@ -30,7 +30,27 @@
                 <li>desirable</li>
                 <li>employable</li>
             </ul>
-            <p>yep! you heard that right. I, like the million of other creatives in the world right now, wants a job out of this *audience gasps*. So without further ado: my portfiolio!</p>
+            <p>yep! you heard that right. I, like the million of other creatives in the </p>
+            <p>here are my proficiencies with programs</p>
+            <table style="text-align: center;">
+                <tr>
+                    <th>Adobe After Effects</th>
+                    <td>Advanced</td>
+                </tr>
+                <tr>
+                    <th>Adobe Illustrator</th>
+                    <td>Beginner</td>
+                </tr>
+                <tr>
+                    <th>Adobe Photoshop</th>
+                    <td>Intermediate</td>
+                </tr>
+                <tr>
+                    <th>Adobe Premiere Pro</th>
+                    <td>Advanced</td>
+                </tr>
+            </table>
+            <p>So without further ado: my portfiolio!</p>
         </section>
         <section id="works">
             <a href="#header"><h2>works</h2></a>
