--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <li>desirable</li>
                 <li>employable</li>
             </ul>
-            <p>yep! you heard that right. I, like the million of other creatives in the </p>
+            <p>yep! you heard that right. I, like the million of other creatives in the world right now, want a job out of this *audience gasps*</p>
             <p>here are my proficiencies with programs</p>
             <table style="text-align: center;">
                 <tr>
