changed image and video links

--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
                     <th>Russian Doll (2019)</th>
                 </tr>
                 <tr>
-                    <td><img src="https://i.imgur.com/ERni4sB.jpg" title="source: imgur.com" alt="movie poster hand with red rope attached to a crown. " width="400px"/></img>
+                    <td><img src="./images/img the favourite poster.jpg" alt="movie poster hand with red rope attached to a crown. " width="400px"/></img>
                     </td>
-                    <td><img src="https://i.imgur.com/NSz57Vi.jpg" title="source: imgur.com" alt=" movie poster with purple background" width="400px"/></img>
+                    <td><img src="./images/img scott pilgrim vs the world.jpg" title="source: imgur.com" alt=" movie poster with purple background" width="400px"/></img>
                     </td>
-                    <td><img src="https://imgur.com/rGUZRGf.jpg" title="source: imgur.com" alt= "abstract psoter of russian doll" width="400px"/></img>
+                    <td><img src="./images/img russian doll poster .jpg" title="source: imgur.com" alt= "abstract psoter of russian doll" width="400px"/></img>
                     </td>
                 </tr>
                 <tr>
@@ -74,10 +74,13 @@
                     <th>Scott Pilgrim vs the World</th>
                 </tr>
                 <tr>
-                    <td><iframe src="https://player.vimeo.com/video/880394108?badge=0&amp;autopause=0&amp;quality_selector=1&amp;player_id=0&amp;app_id=58479" width="400" height="296" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" title="the great edit viola d'amore"></iframe>
+                    <td><video src="./images/the great edit viola d'amore.mp4" width="400" height="296" title="the great edit viola d'amore" controls="source"></iframe>
                     </td>
-                    <td><iframe src="https://player.vimeo.com/video/880394079?badge=0&amp;autopause=0&amp;quality_selector=1&amp;player_id=0&amp;app_id=58479" width="400" height="296" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" title="succession money money money"></iframe></td>
-                    <td><center><iframe src="https://player.vimeo.com/video/880394041?badge=0&amp;autopause=0&amp;quality_selector=1&amp;player_id=0&amp;app_id=58479" width="355px" height="333" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" title="scott pilgrim v the world"></iframe></center></td> <!-- evidently there's an obsession with this particular movie ... -->
+                    <td>
+                        <video src="./images/succession money money money.mp4" width="400" height="296"  title="succession money money money" controls="source"></video></td>
+                    <td>
+                        <center><video src="./images/scott pilgrim v the world.mp4" width="355px" title="scott pilgrim v the world" controls="source"</video></center>
+                    </td> <!-- evidently there's an obsession with this particular movie ... -->
                 </tr>
             </table>
         </section>
