--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <a href="#header"><h2>get in touch</h2></a>
             <ul style="display:inline">
                 <a href="https://www.instagram.com/merileaks/" >instagram</a>
-                <a href="https://facebook.com/" >facebook</a>
+                <a href="https://www.linkedin.com/in/meriele-aberca-381151203/">linkedin</a>
                 <a href="https://twitter.com/logout">twitter</a>
             </ul>
         </section>
