--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width">
     <title>meriele's silly little portfolio</title>
 </head>
 
@@ -61,11 +61,11 @@
                     <th>Russian Doll (2019)</th>
                 </tr>
                 <tr>
-                    <td><img src="./images/img the favourite poster.jpg" alt="movie poster hand with red rope attached to a crown. " width="400px"/></img>
+                    <td><img src="./images/img the favourite poster.jpg" alt="movie poster hand with red rope attached to a crown. " width="400px"></img>
                     </td>
-                    <td><img src="./images/img scott pilgrim vs the world.jpg" title="source: imgur.com" alt=" movie poster with purple background" width="400px"/></img>
+                    <td><img src="./images/img scott pilgrim vs the world.jpg" alt=" movie poster with purple background" width="400px"></img>
                     </td>
-                    <td><img src="./images/img russian doll poster .jpg" title="source: imgur.com" alt= "abstract psoter of russian doll" width="400px"/></img>
+                    <td><img src="./images/img russian doll poster.jpg" alt= "abstract psoter of russian doll" width="400px"></img>
                     </td>
                 </tr>
                 <tr>
@@ -74,7 +74,7 @@
                     <th>Scott Pilgrim vs the World</th>
                 </tr>
                 <tr>
-                    <td><video src="./images/the great edit viola d'amore.mp4" width="400" height="296" title="the great edit viola d'amore" controls="source"></iframe>
+                    <td><video src="./images/the great edit viola d'amore.mp4" width="400" height="296" title="the great edit viola d'amore" controls="source"></video>
                     </td>
                     <td>
                         <video src="./images/succession money money money.mp4" width="400" height="296"  title="succession money money money" controls="source"></video></td>
