--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
                     <th>Russian Doll (2019)</th>
                 </tr>
                 <tr>
-                    <td><img src="./images/img the favourite poster.jpg" alt="movie poster hand with red rope attached to a crown. " width="400px"></img>
+                    <td><img src="./images/img the favourite poster.jpg" alt="movie poster hand with red rope attached to a crown. " width="400px"/>
                     </td>
-                    <td><img src="./images/img scott pilgrim vs the world.jpg" alt=" movie poster with purple background" width="400px"></img>
+                    <td><img src="./images/img scott pilgrim vs the world.jpg" alt=" movie poster with purple background" width="400px"/>
                     </td>
-                    <td><img src="./images/img russian doll poster.jpg" alt= "abstract psoter of russian doll" width="400px"></img>
+                    <td><img src="./images/img russian doll poster.jpg" alt= "abstract psoter of russian doll" width="400px"/>
                     </td>
                 </tr>
                 <tr>
@@ -74,23 +74,28 @@
                     <th>Scott Pilgrim vs the World</th>
                 </tr>
                 <tr>
-                    <td><video src="./images/the great edit viola d'amore.mp4" width="400" height="296" title="the great edit viola d'amore" controls="source"></video>
+                    <td><video src="./images/the great edit viola d'amore.mp4" width="400" title="the great edit viola d'amore" controls></video>
                     </td>
                     <td>
-                        <video src="./images/succession money money money.mp4" width="400" height="296"  title="succession money money money" controls="source"></video></td>
+                        <video src="./images/succession money money money.mp4" width="400" title="succession money money money" controls></video>
+                    </td>
                     <td>
-                        <center><video src="./images/scott pilgrim v the world.mp4" width="355px" title="scott pilgrim v the world" controls="source"</video></center>
+                        <center>
+                            <video src="./images/scott pilgrim v the world.mp4" width="355" title="scott pilgrim v the world" controls></video>
+                        </center>
                     </td> <!-- evidently there's an obsession with this particular movie ... -->
                 </tr>
             </table>
         </section>
         <section id="contacts">
             <a href="#header"><h2>get in touch</h2></a>
-            <ul style="display:inline">
-                <a href="https://www.instagram.com/merileaks/" >instagram</a>
-                <a href="https://www.linkedin.com/in/meriele-aberca-381151203/">linkedin</a>
-                <a href="https://twitter.com/logout">twitter</a>
-            </ul>
+            <li list-style-type="none">
+                <ul style="display:inline">
+                    <a href="https://www.instagram.com/merileaks/" >instagram</a>
+                    <a href="https://www.linkedin.com/in/meriele-aberca-381151203/">linkedin</a>
+                    <a href="https://twitter.com/logout">twitter</a>
+                </ul>
+            </li>
         </section>
     </main>
     <p></p>
