fixed links with <ul> attribute

--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
     <header>
         <h1 id="header">meriele</h1>
         <nav>
-            <ul>
-                <a href="#about">about</a>
-                <a href="#works">works</a>
-                <a href="#contacts">get in touch</a>
-            </ul>
+            <table>
+                <tr>
+                    <td><a href="#about">about</a></td>
+                    <td><a href="#works">works</a></td>
+                    <td><a href="#contacts">get in touch</a></td>
+                </tr>
+            </table>
         </nav>
     </header>
     <main>
@@ -87,11 +89,13 @@
         </section>
         <section id="contacts">
             <a href="#header"><h2>get in touch</h2></a>
-                <ul style="display:inline">
-                    <a href="https://www.instagram.com/merileaks/" >instagram</a>
-                    <a href="https://www.linkedin.com/in/meriele-aberca-381151203/">linkedin</a>
-                    <a href="https://twitter.com/logout">twitter</a>
-                </ul>
+                <table>
+                    <tr>
+                        <td><a href="https://www.instagram.com/merileaks/" >instagram</a></td>
+                        <td><a href="https://www.linkedin.com/in/meriele-aberca-381151203/">linkedin</a></td>
+                        <td><a href="https://twitter.com/logout">twitter</a></td>
+                    </tr>
+                </table>
         </section>
     </main>
     <p></p>
