--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <title>meriele's silly little portfolio</title>
 </head>
 
+<link href="styles/styles.css" rel="stylesheet" />
+
 <body>
     <header>
         <h1 id="header">meriele</h1>
