info + works finished

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header class="site-header">
         <div>
-            <h1 id="header">meriele</h1>
+            <h1>meriele</h1>
         </div>
         <div class="nav">
             <nav>
@@ -62,51 +62,24 @@
         <a href="#header"><h2>works</h2></a>
         <section id="works">
             <div class="portimg">
-                <img src="./images/img_the_favourite_poster.jpg" alt="movie poster hand with red rope attached to a crown." width="400px">
-                <img src="./images/img_scott_pilgrim_vs_the_world.jpg" alt="movie poster with purple background" width="400px">
-                <img src="./images/img_russian_doll_poster.jpg" alt= "abstract psoter of russian doll" width="400px">
+                <img src="./images/img_the_favourite_poster.jpg" alt="movie poster hand with red rope attached to a crown.">
+                <img src="./images/img_scott_pilgrim_vs_the_world.jpg" alt="movie poster with purple background" >
+                <img src="./images/img_russian_doll_poster.jpg" alt= "abstract psoter of russian doll" >
             </div>
-            
-           <!-- <table>
-                <tr>
-                    <th>The Favourite (2018)</th>
-                    <th>Scott Pilgrim vs the World (2010)</th>
-                    <th>Russian Doll (2019)</th>
-                </tr>
-                <tr>
-                    <td><img src="./images/img_the_favourite_poster.jpg" alt="movie poster hand with red rope attached to a crown." width="400">
-                    </td>
-                    <td><img src="./images/img_scott_pilgrim_vs_the_world.jpg" alt="movie poster with purple background" width="400">
-                    </td>
-                    <td><img src="./images/img_russian_doll_poster.jpg" alt= "abstract psoter of russian doll" width="400">
-                    </td>
-                </tr>
-                <tr>
-                    <th>The Great</th>
-                    <th>Succession</th>
-                    <th>Scott Pilgrim vs the World</th>
-                </tr>
-                <tr>
-                    <td><video src="./images/the_great_edit_viola_d'amore.mp4" width="400" title="the great edit viola d'amore" controls></video>
-                    </td>
-                    <td>
-                        <video src="./images/succession_money_money_money.mp4" width="400" title="succession money money money" controls></video>
-                    </td>
-                    <td style="text-align:center;">
-                        <video src="./images/scott_pilgrim_v_the_world.mp4" width="355" title="scott pilgrim v the world" controls></video>
-                    </td> <!-- evidently there's an obsession with this particular movie ... --
-                </tr>
-            </table>-->        
+            <div class="portimg">
+                <video src="./images/the_great_edit_viola_d'amore.mp4" title="the great edit viola d'amore" controls></video>
+                <video src="./images/succession_money_money_money.mp4" title="succession money money money" controls></video>
+                <video src="./images/scott_pilgrim_v_the_world.mp4"  title="scott pilgrim v the world" controls></video>
+            </div>
         </section>
+        <a href="#header"><h2>get in touch</h2></a>
         <section id="contacts">
-            <a href="#header"><h2>get in touch</h2></a>
-                <table>
-                    <tr>
-                        <td><a href="https://www.instagram.com/merileaks/" >instagram</a></td>
-                        <td><a href="https://www.linkedin.com/in/meriele-aberca-381151203/">linkedin</a></td>
-                        <td><a href="https://twitter.com/logout">twitter</a></td>
-                    </tr>
-                </table>
+            <a href="#header">
+                <div class="con">   
+                        <a href="https://www.instagram.com/merileaks/" ><i class="fa fa-instagram"></i></a>
+                        <a href="https://www.linkedin.com/in/meriele-aberca-381151203/"><i class="fa fa-linkedin"></i></a>
+                        <a href="https://twitter.com/logout"><i class="fa fa-twitter"></i></a>
+                </div>
         </section>
     </main>
     <p></p>
